--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </div>
             <div class="col-12 col-xl-5 container-text text-end align-self-center">
                 <h2>BLEIB AUF DEM NEUSTEN STAND</h2>
-                <p>Stundenplan, Vertrungsplan und Klausurplan in einem Kalender. Mit dem
-                    <a href="/student/register" class="custom-link">Student Calendar</a>
+                <p>Stundenplan, Vertrungsplan und Klausurplan in einem Kalender. Mit der
+                    <a href="/student/register" class="custom-link">Schulverwaltung</a>
                     kannst du ganz einfach deine Kurse markieren und sie in deinen Kalender einfügen.</p>
             </div>
         </div>
