--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -16,7 +16,7 @@
 
     <!-- Standard Meta -->
     <meta name="theme-color" content="#131a26">
-    <title>Parcivad | MC Dashboard</title>
+    <title>MC Dashboard</title>
 
     <!--Favicon Icons-->
     <link href="/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
@@ -94,7 +94,7 @@
                             </div>
                             <div class="w-100"></div>
                             <div style="display: flex;">
-                                <h5 class="domain">status</h5>
+                                <h5 class="dynInfoTitle">status</h5>
                                 <div class="blob red" id="performanceBulb"></div>
                             </div>
                         </div>
@@ -116,7 +116,7 @@
                             </div>
                             <div class="w-100"></div>
                             <div style="display: flex;">
-                                <h5 class="domain">ø<span id="averagePing"></span>ms</h5>
+                                <h5 class="dynInfoTitle">ø<span id="averagePing"></span>ms</h5>
                                 <div class="blob red" id="connectionBulb"></div>
                             </div>
                         </div>
