--- a/modules/footer.html
+++ b/modules/footer.html
@@ -54,17 +54,10 @@
     <div class="container pt-4 pb-4">
         <div class="row row-cols-5 content-table">
             <div class="col-12 col-xl-4 footerFirst">
-                <h2>Made with a <img width="40" height="40" src="/img/cookie.png"> by Timur Stegmann</h2>
+                <h2>Made with a <img width="40" height="40" src="/img/icons/cookie.png"> by Timur Stegmann</h2>
 
                 <div class="row row-cols-2">
                     <div class="row col">
-                        <a href="http://reddit.com/u/parcivad" target="_blank" rel="noreferrer noopener">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-reddit" viewBox="0 0 16 16">
-                                <path d="M6.167 8a.831.831 0 0 0-.83.83c0 .459.372.84.83.831a.831.831 0 0 0 0-1.661zm1.843 3.647c.315 0 1.403-.038 1.976-.611a.232.232 0 0 0 0-.306.213.213 0 0 0-.306 0c-.353.363-1.126.487-1.67.487-.545 0-1.308-.124-1.671-.487a.213.213 0 0 0-.306 0 .213.213 0 0 0 0 .306c.564.563 1.652.61 1.977.61zm.992-2.807c0 .458.373.83.831.83.458 0 .83-.381.83-.83a.831.831 0 0 0-1.66 0z"/>
-                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.828-1.165c-.315 0-.602.124-.812.325-.801-.573-1.9-.945-3.121-.993l.534-2.501 1.738.372a.83.83 0 1 0 .83-.869.83.83 0 0 0-.744.468l-1.938-.41a.203.203 0 0 0-.153.028.186.186 0 0 0-.086.134l-.592 2.788c-1.24.038-2.358.41-3.17.992-.21-.2-.496-.324-.81-.324a1.163 1.163 0 0 0-.478 2.224c-.02.115-.029.23-.029.353 0 1.795 2.091 3.256 4.669 3.256 2.577 0 4.668-1.451 4.668-3.256 0-.114-.01-.238-.029-.353.401-.181.688-.592.688-1.069 0-.65-.525-1.165-1.165-1.165z"/>
-                            </svg>
-                            Reddit
-                        </a>
                         <a href="http://github.com/parcivad" target="_blank" rel="noreferrer noopener">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
@@ -101,8 +94,8 @@
                 <div class="footerLinkListLine"></div>
 
                 <div class="pt-2 row">
-                    <a href="/minecraft">Dashboard</a>
-                    <a href="/student/register">Student Calendar</a>
+                    <a href="/student/register">Schulverwaltung</a>
+                    <a href="/minecraft">MC Dashboard</a>
                     <a href="/insektenhotel">Projekttage</a>
                 </div>
             </div>
@@ -120,8 +113,17 @@
                     <a href="https://github.com/parcivad/ips-logger">Java MongoDB in Minecraft</a>
                 </div>
             </div>
-            <div class="col-12 col-xl-3 pt-5 pt-xl-0 col-3">
+            <div class="col-12 col-xl-3 pt-5 pt-xl-0 col-3 footerLinkList">
+                <h5>Datenschutz</h5>
+
+                <div class="footerLinkListLine"></div>
+
+                <div class="pt-2 row">
+                    <a href="https://github.com/parcivad/ips-logger">Datenschutzerklärung</a>
+                    <a href="https://github.com/parcivad/ips-reolink">Nutzung von Cookies</a>
+                    <a href="https://github.com/parcivad/ips-home-connect">Impressum</a>
                 </div>
+            </div>
         </div>
     </div>
 </footer>
