--- a/modules/footer.html
+++ b/modules/footer.html
@@ -94,7 +94,7 @@
                 <div class="footerLinkListLine"></div>
 
                 <div class="pt-2 row">
-                    <a href="/student/register">Schulverwaltung</a>
+                    <a href="/student/home">Schulverwaltung</a>
                     <a href="/minecraft">MC Dashboard</a>
                     <a href="/insektenhotel">Projekttage</a>
                 </div>
