--- a/modules/header.html
+++ b/modules/header.html
@@ -14,7 +14,7 @@
         <div class="col-8 gx-2 collapse navbar-collapse justify-content-end" id="navbar">
             <ul class="navbar-nav nav-style align-self-center" style="font-family: 'Arial Black'; font-size: 1rem; font-weight: revert">
                 <li class="nav-item">
-                    <a class="nav-link" href="/student/register">Schulverwaltung</a>
+                    <a class="nav-link" href="/student/home">Schulverwaltung</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/minecraft">MC Dashboard</a>
