--- a/modules/footer.html
+++ b/modules/footer.html
@@ -119,9 +119,9 @@
                 <div class="footerLinkListLine"></div>
 
                 <div class="pt-2 row">
-                    <a href="https://github.com/parcivad/ips-logger">Datenschutzerklärung</a>
-                    <a href="https://github.com/parcivad/ips-reolink">Nutzung von Cookies</a>
-                    <a href="https://github.com/parcivad/ips-home-connect">Impressum</a>
+                    <a href="https://github.com/parcivad/datenschutz">Datenschutzerklärung</a>
+                    <a href="https://github.com/parcivad/datenschut">Nutzung von Cookies</a>
+                    <a href="https://github.com/parcivad/impressum">Impressum</a>
                 </div>
             </div>
         </div>
