--- a/404.html
+++ b/404.html
@@ -42,8 +42,8 @@
                 Diese Seite wird momentan noch aufgebaut, also hab bitte etwas Geduld :D
             </p>
             <div style="display: flex" class="justify-content-center">
-                <img style="border-radius: 50px 0 0 50px" width="100%" src="/img/404/han-solo.gif">
-                <img style="border-radius: 0 50px 50px 0" width="100%" src="/img/404/chewbacca.gif">
+                <img style="border-radius: 50px 0 0 50px" width="100%" src="/img/404page/han-solo.gif">
+                <img style="border-radius: 0 50px 50px 0" width="100%" src="/img/404page/chewbacca.gif">
             </div>
         </div>
     </div>
@@ -53,7 +53,7 @@
 <footer id="footer"></footer>
 
 <script src="/vendor/jquery-3.6.0.min.js"></script>
-<script src="/js/loader.js"></script>
+<script src="/js/utils/footerAndHeader.js"></script>
 
 </body>
 </html>
