--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -140,7 +140,7 @@
 
 <footer id="footer"></footer>
 
-<script src="/js/loader.js"></script>
+<script src="/js/utils/footerAndHeader.js"></script>
 <script src="/js/minecraftDashboardApi.js"></script>
 
 </body>
