--- a/student/register/index.html
+++ b/student/register/index.html
@@ -4,12 +4,13 @@
     <!--Required Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Social Media Headline -->
-    <meta property="og:title" content="Parcivad iCal. Stundenplan, Vertretungsplan und Klausurplan in einem Kalender."/>
-    <meta property="og:image" content="http://parcivad.de/img/header/parcivad.png"/>
+    <meta property="og:title" content="Registrierung für die Parcivad Schulverwaltung"/>
+
     <!-- Standard Meta -->
-    <meta name="theme-color" content="#e7e8ed">
     <title>Registrierung Schulverwaltung</title>
+
     <!--Favicon Icons-->
     <link href="/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="/img/favicon_io/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
@@ -20,15 +21,18 @@
     <script src="/vendor/jquery-3.6.0.min.js"></script>
 
     <link href="/vendor/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="/css/sites/general.css" rel="stylesheet" type="text/css">
-
-    <link href="/css/login.css" rel="stylesheet" type="text/css">
 
     <link href="/vendor/loadAnimation/loadAnimation.css" rel="stylesheet" type="text/css">
     <script src="/vendor/loadAnimation/loadAnimation.js"></script>
 
-    <!--Java Script-->
+    <!--CSS-->
+    <link href="/css/studentlogin.css" rel="stylesheet" type="text/css">
+
+    <!--JS-->
     <script src="/vendor/bootstrap/bootstrap.js" type="text/javascript"></script>
+
+    <!--Meta Theme-->
+    <meta name="theme-color" content="#e7e8ed">
 </head>
 <body>
 
@@ -39,27 +43,29 @@
                 <div class="px-3 py-4">
 
                     <div class="text-center pb-5">
-                        <h1><img style="margin-top: -13px" width="40" height="40" src="/img/icons/school.png"> Schulverwaltung</h1>
+                        <h1><img style="margin-top: -13px" width="40" height="40" src="/img/icons/school.png">
+                            Schulverwaltung</h1>
                     </div>
 
                     <div>
-                        <div class="input-group mb-3" style="background-color: #f1f1f1; border: 0; border-radius: 15px;">
-                            <select style="background-color: #f1f1f1; border: 0; border-radius: 15px;" class="form-select" id="inputGroupSelect02">
+                        <div class="input-group selector mb-3">
+                            <select class="form-select selector" id="inputGroupSelect02">
                                 <option selected value="LRGYM">Löwenrot-Gymnasium</option>
                             </select>
                         </div>
 
-                        <p id="grade-error" class="input-valid">Bitte wähle deine Kurse</p>
-                        <div class="input-group mb-3" style="background-color: #f1f1f1; border: 0; border-radius: 15px;">
-                            <select style="background-color: #f1f1f1; border: 0; border-radius: 15px;"
-                                    name="grade" id="grade" class="form-select" onchange="loadCourses()">
+                        <p id="grade-error" class="input-valid">Bitte wähle deine Klasse</p>
+                        <div class="input-group selector mb-3">
+                            <select id="grade" name="grade" class="form-select selector"
+                                    onchange="loadCourses()">
                             </select>
                         </div>
 
                         <p id="courses-error" class="input-valid">Bitte wähle deine Kurse</p>
-                        <div class="input-group mb-3" style="background-color: #f1f1f1; border: 0; border-radius: 15px;">
-                            <select multiple multiselect-hide-x="true" multiselect-search="true" multiselect-max-items="5"
-                                    name="courses" id="courses" style="background-color: #f1f1f1; border: 0; border-radius: 15px; width: 100%;" onchange="courses.loadOptions()">
+                        <div class="input-group selector mb-3">
+                            <select id="courses" name="courses" class="selector"
+                                    multiple multiselect-hide-x="true" multiselect-search="true"
+                                    multiselect-max-items="5" onchange="courses.loadOptions()">
                             </select>
                         </div>
                     </div>
@@ -67,39 +73,56 @@
                     <div>
                         <p id="firstname-error" class="input-valid">Bitte gebe deinen Vornamen an</p>
                         <div class="input-group" data-index="1">
-                            <input id="firstname" oninput="buildMail()" style="border-radius: 15px 15px 0 0;" type="text" class="form-control input-item" placeholder="Vorname" autocomplete="given-name" aria-label="firstname" aria-describedby="basic-addon1" onkeydown="" data-index="1">
+                            <input id="firstname" oninput="buildMail()" style="border-radius: 15px 15px 0 0;"
+                                   type="text" class="form-control input-item" placeholder="Vorname"
+                                   autocomplete="given-name" aria-label="firstname" aria-describedby="basic-addon1"
+                                   onkeydown="" data-index="1">
                         </div>
                         <p id="lastname-error" class="input-valid">Bitte gebe deinen Nachnamen an</p>
                         <div class="input-group" data-index="2">
-                            <input id="lastname" oninput="buildMail()" style="border-radius: 0 0 15px 15px;" type="text" class="form-control input-item" placeholder="Name" autocomplete="family-name" aria-label="lastname" aria-describedby="basic-addon1" data-index="2">
+                            <input id="lastname" oninput="buildMail()" style="border-radius: 0 0 15px 15px;"
+                                   type="text" class="form-control input-item" placeholder="Name"
+                                   autocomplete="family-name" aria-label="lastname" aria-describedby="basic-addon1"
+                                   data-index="2">
                         </div>
 
                         <div class="mt-3">
                             <p id="mail-error" class="input-valid">Bitte gebe ein E-Mail für dich an</p>
                             <div class="input-group">
-                                <input id="mail" type="email" class="input-item form-control" disabled style="cursor: not-allowed" placeholder="E-Mail" aria-label="email" aria-describedby="basic-addon1">
+                                <input id="mail" type="email" class="input-item form-control" disabled
+                                       style="cursor: not-allowed" placeholder="E-Mail" aria-label="email"
+                                       aria-describedby="basic-addon1">
                             </div>
                         </div>
 
                         <div class="mt-3">
                             <p id="password-error" class="input-valid">Bitte gebe ein Passwort für dich ein</p>
                             <div class="input-group">
-                                <input id="password" type="password" class="input-item form-control" placeholder="Passwort" aria-label="password" aria-describedby="basic-addon1" data-index="3">
+                                <input id="password" type="password" class="input-item form-control"
+                                       placeholder="Passwort" aria-label="password" aria-describedby="basic-addon1"
+                                       data-index="3">
                             </div>
                         </div>
 
                         <div class="mt-3">
-                            <p id="cookies_agree-error" class="input-valid">Dieser Dienst der Website benötigt notwendige Cookies</p>
+                            <p id="cookies_agree-error" class="input-valid">Dieser Dienst der Website benötigt
+                                notwendige Cookies</p>
                             <div class="d-flex">
-                                <input id="cookies_agree" class="form-check-input mt-0" style="min-width: 15px;" type="checkbox">
-                                <p class="ps-1 text-secondary" style="line-height: 1">Mit der Nutzung dieser Website stimme ich dauerhaft der Verwendung von notwendigen Cookies zu und benötige keinen weiteren Hinweis zu diesen.</p>
+                                <input id="cookies_agree" class="form-check-input mt-0" style="min-width: 15px;"
+                                       type="checkbox">
+                                <p class="ps-1 text-secondary" style="line-height: 1">
+                                    Mit der Nutzung dieser Website stimme ich dauerhaft der Verwendung von notwendigen
+                                    Cookies zu und benötige keinen weiteren Hinweis zu diesen.</p>
                             </div>
                         </div>
                         <div class="text-center pt-1 pb-2">
-                            <a href="/student/login" class="text-decoration-none text-dark">Du hast bereits ein Konto?</a>
+                            <a href="/student/login" class="text-decoration-none text-dark">
+                                Du hast bereits ein Konto?
+                            </a>
                         </div>
 
-                        <p id="register-error" class="text-center input-valid">Etwas ist schiefgelaufen, bitte überprüfe deine Eingabe</p>
+                        <p id="register-error" class="text-center input-valid">Etwas ist schiefgelaufen,
+                            bitte überprüfe deine Eingabe</p>
                     </div>
 
 
@@ -123,7 +146,9 @@
     </div>
 </div>
 
-<script src="/js/student/cookieHandler.js"></script>
-<script src="/js/student/studentRegister.js"></script>
+<script src="/js/utils/skipThroughInput.js" rel="script" type="text/javascript"></script>
+<script src="/js/student/cookieHandler.js" rel="script" type="text/javascript"></script>
+<script src="/js/student/studentApi.js" rel="script" type="text/javascript"></script>
+<script src="/js/student/studentRegister.js" rel="script" type="text/javascript"></script>
 </body>
 </html>
