--- a/insektenhotel/index.html
+++ b/insektenhotel/index.html
@@ -273,6 +273,6 @@
 <footer id="footer"></footer>
 
 <script src="/vendor/jquery-3.6.0.min.js"></script>
-<script src="/js/loader.js"></script>
+<script src="/js/utils/footerAndHeader.js"></script>
 </body>
 </html>
