--- a/student/login/index.html
+++ b/student/login/index.html
@@ -4,31 +4,35 @@
     <!--Required Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Social Media Headline -->
-    <meta property="og:title" content="Parcivad iCal. Stundenplan, Vertretungsplan und Klausurplan in einem Kalender."/>
-    <meta property="og:image" content="http://parcivad.de/img/header/parcivad.png"/>
+    <meta property="og:title" content="Anmeldung zur Parcivad Schulverwaltung"/>
+
     <!-- Standard Meta -->
-    <meta name="theme-color" content="#e7e8ed">
     <title>Anmeldung Schulverwaltung</title>
+
     <!--Favicon Icons-->
     <link href="/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="/img/favicon_io/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
     <link href="/img/favicon_io/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
     <link href="/img/favicon_io/site.webmanifest" rel="manifest">
 
-    <!--CSS-->
+    <!--Vendor-->
     <script src="/vendor/jquery-3.6.0.min.js"></script>
 
     <link href="/vendor/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="/css/sites/general.css" rel="stylesheet" type="text/css">
-
-    <link href="/css/login.css" rel="stylesheet" type="text/css">
 
     <link href="/vendor/loadAnimation/loadAnimation.css" rel="stylesheet" type="text/css">
     <script src="/vendor/loadAnimation/loadAnimation.js"></script>
 
-    <!--Java Script-->
+    <!--CSS-->
+    <link href="/css/studentlogin.css" rel="stylesheet" type="text/css">
+
+    <!--JS -->
     <script src="/vendor/bootstrap/bootstrap.js" type="text/javascript"></script>
+
+    <!--Meta Theme-->
+    <meta name="theme-color" content="#e7e8ed">
 </head>
 <body>
 
@@ -39,12 +43,13 @@
                 <div class="px-3 py-4">
 
                     <div class="text-center pb-5">
-                        <h1><img style="margin-top: -13px" width="40" height="40" src="/img/icons/school.png"> Schulverwaltung</h1>
+                        <h1><img style="margin-top: -13px" width="40" height="40" src="/img/icons/school.png" alt="school icon">
+                            Schulverwaltung</h1>
                     </div>
 
                     <div>
                         <div class="input-group mb-3" style="background-color: #f1f1f1; border: 0; border-radius: 15px;">
-                            <select style="background-color: #f1f1f1; border: 0; border-radius: 15px;" class="form-select" id="inputGroupSelect02">
+                            <select class="form-select selector" id="inputGroupSelect02">
                                 <option selected value="LRGYM">Löwenrot-Gymnasium</option>
                             </select>
                         </div>
@@ -53,28 +58,39 @@
                     <div>
                         <p id="name-error" class="input-valid">Bitte gebe deinen Vornamen an</p>
                         <div class="input-group" data-index="1">
-                            <input id="name" style="border-radius: 15px" type="text" class="form-control input-item" placeholder="Vorname.Name" aria-label="name" aria-describedby="basic-addon1" data-index="1">
+                            <input id="name" style="border-radius: 15px" type="text" class="form-control input-item"
+                                   placeholder="Vorname.Name" aria-label="name" aria-describedby="basic-addon1"
+                                   data-index="1">
                         </div>
 
                         <div class="mt-3">
                             <p id="password-error" class="input-valid">Bitte gebe dein Passwort ein</p>
                             <div class="input-group">
-                                <input id="password" type="password" class="input-item form-control" placeholder="Passwort" aria-label="password" aria-describedby="basic-addon1" data-index="2">
+                                <input id="password" type="password" class="input-item form-control"
+                                       placeholder="Passwort" aria-label="password" aria-describedby="basic-addon1"
+                                       data-index="2">
                             </div>
                         </div>
 
                         <div class="mt-3">
-                            <p id="cookies_agree-error" class="input-valid">Dieser Dienst der Website benötigt notwendige Cookies</p>
+                            <p id="cookies_agree-error" class="input-valid">Dieser Dienst der Website benötigt
+                                notwendige Cookies</p>
                             <div class="d-flex">
-                                <input id="cookies_agree" class="form-check-input mt-0" style="min-width: 15px;" type="checkbox" checked disabled>
-                                <p class="ps-1 text-secondary" style="line-height: 1">Mit der Nutzung dieser Website stimme ich dauerhaft der Verwendung von notwendigen Cookies zu und benötige keinen weiteren Hinweis zu diesen.</p>
+                                <input id="cookies_agree" class="form-check-input mt-0" style="min-width: 15px;" type="checkbox"
+                                       checked disabled>
+                                <p class="ps-1 text-secondary" style="line-height: 1">Mit der Nutzung dieser Website stimme ich
+                                    dauerhaft der Verwendung von notwendigen Cookies zu und benötige keinen weiteren
+                                    Hinweis zu diesen.</p>
                             </div>
                         </div>
                         <div class="text-center pt-1 pb-2">
-                            <a href="/student/register" class="text-decoration-none text-dark">Du hast noch kein Konto?</a>
+                            <a href="/student/register" class="text-decoration-none text-dark">
+                                Du hast noch kein Konto?
+                            </a>
                         </div>
 
-                        <p id="register-error" class="text-center input-valid">Etwas ist schiefgelaufen, bitte überprüfe deine Eingabe</p>
+                        <p id="register-error" class="text-center input-valid">Etwas ist schiefgelaufen, bitte überprüfe
+                            deine Eingabe</p>
                     </div>
 
                     <div class="text-center pt-5">
@@ -97,7 +113,9 @@
     </div>
 </div>
 
-<script src="/js/student/cookieHandler.js"></script>
-<script src="/js/student/studentLogin.js"></script>
+<script src="/js/utils/skipThroughInput.js" rel="script" type="text/javascript"></script>
+<script src="/js/student/cookieHandler.js" rel="script" type="text/javascript"></script>
+<script src="/js/student/studentApi.js" rel="script" type="text/javascript"></script>
+<script src="/js/student/studentLogin.js" rel="script" type="text/javascript"></script>
 </body>
 </html>
