--- a/student/home/modules/quotation.html
+++ b/student/home/modules/quotation.html
@@ -51,7 +51,7 @@
     }
 </style>
 <div class="h-100">
-    <div class="sticky-top" style="z-index: 1">
+    <div class="sticky-top" style="z-index: 1; background-color: var(--bg-content)">
         <div class="d-flex pt-3 px-1 justify-content-end sticky-top">
             <div class="d-flex px-2">
                 <div class="pe-2">
