--- a/student/home/index.html
+++ b/student/home/index.html
@@ -128,11 +128,13 @@
                                 <div class="col text-end text-secondary container-none">Detail</div>
                                 <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
                             </div>
-                            <div class="d-flex pb-1 cursor-pointer">
-                                <div class="pe-1 text-start"><ion-icon name="add-circle-outline"></ion-icon></div>
-                                <div class="col text-start"><a role="button" data-bs-dismiss="offcanvas" aria-label="Close" onclick="loadModule('calendarSubscription')">Kalender Abonnieren</a></div>
-                                <div class="col text-end text-secondary container-none">Detail</div>
-                                <div id="calendarActive" class="ps-1 text-start"><ion-icon name="checkmark-outline"></ion-icon></div>
+                            <div class="pb-1">
+                                <div class="d-flex cursor-pointer" role="button" data-bs-dismiss="offcanvas" aria-label="Close" onclick="loadModule('calendarSubscription')">
+                                    <div class="pe-1 text-start"><ion-icon name="add-circle-outline"></ion-icon></div>
+                                    <div class="col text-start">Kalender Abonnieren</div>
+                                    <div class="col text-end text-secondary container-none">Detail</div>
+                                    <div id="calendarActive" class="ps-1 text-start"><ion-icon name="checkmark-outline"></ion-icon></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -162,11 +164,13 @@
                     <div class="pb-3">
                         <h3>Einstellungen</h3>
                         <div class="ps-1 align-content-between">
-                            <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
-                                <div class="pe-1 text-start"><ion-icon name="person-circle-outline"></ion-icon></div>
-                                <div class="col text-start">Konto</div>
-                                <div class="col text-end text-secondary container-none">Detail</div>
-                                <div class="ps-1 text-start"><ion-icon name="information-circle-outline"></ion-icon></div>
+                            <div class="pb-1">
+                                <div class="d-flex cursor-pointer" role="button" data-bs-dismiss="offcanvas" aria-label="Close" onclick="loadModule('account')">
+                                    <div class="pe-1 text-start"><ion-icon name="person-circle-outline"></ion-icon></div>
+                                    <div class="col text-start">Konto</div>
+                                    <div class="col text-end text-secondary container-none">Detail</div>
+                                    <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
+                                </div>
                             </div>
                             <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
                                 <div class="pe-1 text-start"><ion-icon name="cog-outline"></ion-icon></div>
@@ -174,11 +178,13 @@
                                 <div class="col text-end text-secondary container-none">Detail</div>
                                 <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
                             </div>
-                            <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
-                                <div class="pe-1 text-start"><ion-icon name="hammer-outline"></ion-icon></div>
-                                <div class="col text-start">Entwicklung</div>
-                                <div class="col text-end text-secondary container-none">v.0.1</div>
-                                <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
+                            <div class="pb-1">
+                                <div class="d-flex cursor-pointer" role="button" data-bs-dismiss="offcanvas" aria-label="Close" onclick="loadModule('development')">
+                                    <div class="pe-1 text-start"><ion-icon name="hammer-outline"></ion-icon></div>
+                                    <div class="col text-start">Entwicklung</div>
+                                    <div class="col text-end text-secondary container-none">v.0.1</div>
+                                    <div class="ps-1 text-start"><ion-icon name="information-circle-outline"></ion-icon></div>
+                                </div>
                             </div>
                             <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
                                 <div class="pe-1 text-start"><ion-icon name="open-outline"></ion-icon></ion-icon></div>
